[package]
name = "gcn-fonts"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
gcn-fonts-macro = { path = "gcn-fonts-macro" }
gcn = { git = "https://github.com/CryZe/gcn", rev = "20204290fb1073bce9ec4b7b1473ece3d08a337d" }
proc-macro-hack = "0.5.11"
