[package]
name = "gcn-fonts-macro"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
syn = "1.0.14"
quote = "1.0.2"
image = { version = "0.23.0", default-features = false }
rusttype = { version = "0.8.2", features = ["gpu_cache"] }
proc-macro-hack = "0.5.11"

[lib]
proc-macro = true
